MF and MC dominoes experiments

--- a/notebooks/D_BAT_M_M_Dominoes.ipynb
+++ b/notebooks/D_BAT_M_M_Dominoes.ipynb
@@ -262,7 +262,6 @@
         "          stats[f\"m{m_idx+1}\"][\"acc\"].append((itr_, acc))\n",
         "          stats[f\"m{m_idx+1}\"][\"r0/1-acc\"].append((itr_, acc_r01))\n",
         "          stats[f\"m{m_idx+1}\"][\"r7/9-acc\"].append((itr_, acc_r79))\n",
-        "          #print_str += f\"[m{i+1}] acc: {acc:.2f}, {Fore.RED} rand-7/9-acc: {acc_r79:.2f}, {Fore.BLUE} rand-0/1-acc: {acc_r01:.2f} {Style.RESET_ALL}\"\n",
         "          print_str += f\" acc: {acc:.2f}, {Fore.BLUE} r0/1-acc: {acc_r01:.2f} {Style.RESET_ALL}\"\n",
         "\n",
         "          print(print_str)\n",
@@ -578,9 +577,9 @@
         "\n",
         "perturb_dl = torch.utils.data.DataLoader(data_perturb, batch_size=256, shuffle=True)\n",
         "\n",
-        "print(f\"Perturb length: {len(perturb_dl.dataset)}\")\n",
+        "print(f\"OOD dataset size: {len(perturb_dl.dataset)}\")\n",
         "\n",
-        "print(\"Perturbation dataset:\")\n",
+        "print(\"OOD dataset:\")\n",
         "plot_samples(X_perturb)"
       ]
     },
